# receipt-scanner-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  template.yaml
src/gradio_ui/: app.py
src/gradio_ui/scripts/: install_dependencies.sh  start_server.sh  stop_server.sh
src/lambda/submit_batch/: lambda_function.py
src/ocr/: donut.py  nougat.py
