[project]
name = "receipt-scanner-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "AlcidesAlcoba",email = "alcobaalcides@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.40.60,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "gradio (>=5.49.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
